--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <body>
     <section id="sidebar">
       <div id="sidebar-header">
-        <div id="menu-icon-container"><img id="menu-icon" src="assets/icons/hamburger-icon.svg" alt="" /></div>
-        <div>
-          <div>search icon</div>
-          <div>notify</div>
-          <div>settings</div>
+        <div id="menu-icon-container"><img id="menu-icon" src="assets/icons/sidebar/hamburger-icon.svg" alt="" /></div>
+        <div id="sidebar-icon-container">
+          <div><img id="search-icon" src="assets/icons/sidebar/search-icon.svg" alt="" /></div>
+          <div><img id="notify-icon" src="assets/icons/sidebar/notification-icon.svg" alt="" /></div>
+          <div><img id="settings-icon" src="assets/icons/sidebar/settings-icon.svg" alt="" /></div>
         </div>
       </div>
       <div id="sidebar-user">
@@ -43,13 +43,16 @@
     </section>
     <section id="list">
       <div id="list-header">
-        <div><h2>Next 7 Days</h2></div>
-        <div>
-          <div>plus</div>
-          <div>3-dot</div>
+        <div id="title"><h2>TO-DO</h2></div>
+        <div id="list-icon-container">
+          <div><img id="plus-icon" src="assets/icons/list/plus-icon.svg" alt="" /></div>
+          <div><img id="collapseList-icon" src="assets/icons/list/collapseList-icon.svg" alt="" /></div>
+          <div><img id="threeDot-icon" src="assets/icons/list/threeDot-icon.svg" alt="" /></div>
         </div>
       </div>
-      <div id="list-body"></div>
+      <div id="list-body">
+        <div>stuff</div>
+      </div>
     </section>
   </body>
 </html>
