user section of sidebar completed

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         </div>
       </div>
       <div id="sidebar-user">
-        <div>profile-pic</div>
-        <p>UserName</p>
+        <div id="profile-container"><img id="profile-pic" src="assets/icons/sidebar/guest-icon.png" alt="" /></div>
+        <div>
+          <p id="username">Guest</p>
+          <p id="project-counter">0</p>
+        </div>
       </div>
       <div id="project-list">
         <div><strong>Projects</strong></div>
