project list HTML completed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,28 @@
         </div>
       </div>
       <div id="project-list">
-        <div><strong>Projects</strong></div>
+        <div id="projects-header">
+          <p>Projects</p>
+          <img src="assets/icons/sidebar/expand-icon.svg" alt="" />
+        </div>
+        <div id="projects-container">
+          <div class="project">
+            <div class="project-color"></div>
+            <p class="project-title">projectName</p>
+            <p class="task-counter">#</p>
+          </div>
+          <div class="project">
+            <div class="project-color"></div>
+            <p class="project-title">projectName</p>
+            <p class="task-counter">#</p>
+          </div>
+          <div class="project">
+            <div class="project-color"></div>
+            <p class="project-title">projectName</p>
+            <p class="task-counter">#</p>
+          </div>
+        </div>
+        <button><img src="assets/icons/sidebar/plus-icon.svg" alt="" /> Add Project</button>
       </div>
     </section>
     <section id="list">
