added button to check all tasks off

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="title"><h2>To-Do</h2></div>
         <div id="list-icon-container">
           <div><img id="plus-icon" class="js-plus-icon" src="assets/icons/list/plus-icon.svg" alt="" /></div>
-          <div><img id="collapseList-icon" src="assets/icons/list/collapseList-icon.svg" alt="" /></div>
+          <div><img id="checkTasks-icon" class="js-checkTasks" src="assets/icons/list/checkTasks-icon.svg" alt="" /></div>
           <div><img id="threeDot-icon" src="assets/icons/list/threeDot-icon.svg" alt="" /></div>
         </div>
       </div>
@@ -48,6 +48,6 @@
     </section>
 
     <script src="javascripts/add-task.js"></script>
-    <script src="javascripts/task-state.js"></script>
+    <script src="javascripts/check-all-tasks.js"></script>
   </body>
 </html>
