bug fix, menu-visible no longer on by default

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div>
             <img id="threeDot-icon" src="assets/icons/list/threeDot-icon.svg" alt="" />
-            <div id="options-menu" class="menu-visible js-options-menu">
+            <div id="options-menu" class="js-options-menu">
               <div id="delete-button">Delete Tasks</div>
             </div>
           </div>
